@@ -1,6 +1,6 @@
 
 Hexen II: Hammer of Thyrion
-Version 1.5.0
+Version 1.5.1
 
 http://uhexen2.sourceforge.net/
 http://sourceforge.net/projects/uhexen2/
