@@ -1,5 +1,5 @@
 
-Hexen II: Hammer of Thyrion 1.5.0 (demo version)
+Hexen II: Hammer of Thyrion 1.5.1 (demo version)
 ------------------------------------------------
 
 
